# audioman

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/audioman/: __init__.py  __main__.py  i18n.py
src/audioman/cli/: _fader_test_ui.py  analyze.py  app.py  bounce.py  chain.py  commit_cmd.py  doctor.py  dump.py  edl.py  eq_profile.py  fader_compare.py  fader_test.py  fx.py  info.py  list_cmd.py  master.py  mixdown.py  output.py  preset.py  preset_dump.py  process.py  render.py  render_batch.py  scan.py  screen.py  synth.py  visualize.py  voiceover.py
src/audioman/config/: paths.py  settings.py
src/audioman/core/: aesthetic.py  analysis.py  audio_file.py  automix.py  batch.py  batch_render.py  commit.py  diff_synth.py  dsp.py  edl.py  engine.py  gpu_spectral.py  instrument.py  latency.py  loudness.py  mixer.py  multitrack_player.py  pipeline.py  plugin_analysis.py  preset_manager.py  preset_parser.py  preset_schema.py  qc.py  registry.py  session.py  sound_match.py  svl.py  synth_engine.py  test_signal.py  vad.py  vamp_host.py  voiceover.py  waveform.py
src/audioman/gpu/: __init__.py
src/audioman/plugins/: base.py  parameter.py  vst3.py
testing/: bench_opensource.py  poc_rx_load.py
tests/: conftest.py
tests/unit/: test_aesthetic.py  test_analysis.py  test_audio_file.py  test_automix.py  test_batch.py  test_dsp.py  test_edl.py  test_latency.py  test_loudness.py  test_mixer.py  test_pipeline.py  test_preset_manager.py  test_qc.py  test_registry.py  test_session.py  test_session_extended.py  test_svl.py  test_test_signal.py  test_waveform.py
