[project]
name = "audioman"
version = "0.1.0"
description = "Cross-platform CLI wrapper for VST3/AU audio plugins"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "pedalboard>=0.9",
    "soundfile>=0.13",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "soxr>=0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
vamp = ["vamp>=1.1.0"]

[project.scripts]
audioman = "audioman.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audioman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 실제 VST3 플러그인 필요",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
